@@ -39,7 +39,7 @@ Rcpp::List LARS(arma::mat& matX, arma::vec& vecY,
         Rcpp::stop("Number of responses must be equal to number of rows of X!");
 
     arma::vec beta;
-    lars.Train(matX, vecY, beta, false /* do not transpose */);
+    lars.Train(matX, vecY.t(), beta, false /* do not transpose */);
 
     arma::vec lmb = lars.LambdaPath();
     arma::rowvec predictions;
