@@ -4,8 +4,11 @@
 	* configire: Idem
 	* src/Makevars: Use $(SHLIB_OPENMP_CXXFLAGS) if available
 
-	* src/LARS.cpp (LARS): Predict() now wants a rowvector
-	* src/linearRegression.cpp (linearRegression): Idem
+	* src/LARS.cpp (LARS): Predict() now wants a rowvector; and Train()
+	needs a transpose
+	* src/linearRegression.cpp (linearRegression): Idem on rowvector
+	* src/logisticRegression.cpp (logisticRegression): Result is now a
+	rowvector
 
 	* .travis.yml: Use ubuntu-toolchain-r PPA for gcc-7 / g++-7
 
